Adding Components for start, questions, suggestion screens

--- a/angular-covid19-mh/src/app/app.component.html
+++ b/angular-covid19-mh/src/app/app.component.html
@@ -11,6 +11,9 @@
       <!-- Works like div element/container, for the top part of page -->
       <!-- (Leave Blank) -->
     </header>
+    
+    <app-base-panel></app-base-panel>
+
 
     <!-- Section for the screen/card where most of the info will go 
     <section class="section-screen">
@@ -19,42 +22,7 @@
       </div>
     </section> -->
 
-    <div class="grid-container">
-      <p>Hello! Welcome to my COVID-19 mental health app.<br><br>
-      This app is designed to give you a series of questions regarding your mental health during COVID-19, and give suggestions to help improve your wellbeing during COVID-19.<br><br>Click the button below to get started.</p>
-
-      <button>Start Here</button>
-    </div>
-
-    <div class="grid-container">
-      <p>How are you feeling today?</p>
-
-      <input type="radio" id="great" name="mood" value="Really Great">
-      <label for ="great">Really Great</label><br>
-
-      <input type="radio" id="good" name="mood" value="Good">
-      <label for ="good">Good</label><br>
-
-      <input type="radio" id="okay" name="mood" value="Okay">
-      <label for ="okay">Okay</label><br>
-
-      <input type="radio" id="bad" name="mood" value="Bad">
-      <label for ="bad">Bad</label><br>
-
-      <input type="radio" id="terrible" name="mood" value="Really Terrible">
-      <label for ="terrible">Really Terrible</label><br>
-
-      <button>Back</button>
-      <button>Next</button>
-    </div>
-
-    <div class="grid-container">
-      <p>Based on your answers, I suggest... <br></p>
-
-      <p>Put variable here for result</p>
-
-      <button>Retake Questionnaire</button>
-    </div>
+    
 
   </body>
 
