--- a/angular-covid19-mh/src/app/suggestion-panel/suggestion-panel.component.html
+++ b/angular-covid19-mh/src/app/suggestion-panel/suggestion-panel.component.html
@@ -1,1 +1,7 @@
-<p>suggestion-panel works!</p>
+<div class="grid-container">
+    <p>Based on your answers, I suggest... <br></p>
+  
+    <p>Put variable here for result</p>
+  
+    <button>Retake Questionnaire</button>
+</div>
