--- a/angular-covid19-mh/src/app/start-panel/start-panel.component.html
+++ b/angular-covid19-mh/src/app/start-panel/start-panel.component.html
@@ -1,7 +1,15 @@
-<div class="grid-container">
-    <p>Hello! Welcome to my COVID-19 mental health app.<br><br>
-    This app is designed to give you a series of questions regarding your mental health during COVID-19, and give suggestions to help improve your wellbeing during COVID-19.<br><br>Click the button below to get started.</p>
-  
-    <button>Start Here</button>
+<div class="container">
+    <div class="grid-container">
+      
+        <div class="item-1"><p>Hello! Welcome to my COVID-19 mental health app.<br><br>
+        
+        This app is designed to give you a series of questions regarding your mental health during COVID-19, and give suggestions to help improve your wellbeing during COVID-19.<br><br>Click the button below to get started.</p>
 
-</div>
+        </div>
+          
+        <div class="item-2">
+            <button onclick="nextScreen()">Start Here</button>
+        </div>
+  
+    </div>
+  </div>
