--- a/angular-covid19-mh/src/app/question-panel/question-panel.component.css
+++ b/angular-covid19-mh/src/app/question-panel/question-panel.component.css
@@ -2,10 +2,37 @@
     font-family: sans-serif
 }
 
-.grid-container {
+/* For actual container itself and its alignment */
+
+
+.container {
     display: inline-block;
-    grid-template-columns: 80px;
-    grid-template-rows: 80px;
-    grid-gap: 10px 10px;
-    border: solid;
+    background-color: rgb(93, 154, 152);
+    border-radius: 5px;
+}
+
+/* For the grid within the box/container */
+.grid-container {
+    display: grid;
+    grid-template-columns: 50px 500px 50px;
+    grid-template-rows: auto auto 20px auto 20px;
+    grid-template-areas:
+        ". header ."
+        ". main ."
+        ". . ."
+        ". footer ."
+        ". . ."
+}
+
+.item-1 {
+    grid-area: header;
+}
+
+.item-2 {
+    grid-area: main;
+    text-align: left;
+}
+
+.item-3 {
+    grid-area: footer;
 }
