--- a/angular-covid19-mh/src/app/base-panel/base-panel.component.html
+++ b/angular-covid19-mh/src/app/base-panel/base-panel.component.html
@@ -1,3 +1,3 @@
-<app-start-panel></app-start-panel>
+<!--<app-start-panel></app-start-panel>-->
 <!--<app-question-panel></app-question-panel>-->
 <!--<app-suggestion-panel></app-suggestion-panel>-->
