Added functionality for frontend to retrieve data through web api

--- a/angular-covid19-mh/src/app/question-panel/question-panel.component.html
+++ b/angular-covid19-mh/src/app/question-panel/question-panel.component.html
@@ -1,29 +1,31 @@
 <div class="container">
   <div class="grid-container">
     
-    <div class="item-1"><h2>{{questions[0].question}}</h2></div>
+    <!--<div class="item-1"><h2>{{questions[0].question}}</h2></div>-->
+
+    <div class="item-1"><h2>{{questions[1].question}}</h2></div>
     <div class="item-2">
     
-    <!--
-    <input type="radio" id="great" name="mood" value="Really Great">
-    <label for ="great">{{questions[0].options[0].answer}}</label><br>
-  
-    <input type="radio" id="good" name="mood" value="Good">
-    <label for ="good">{{questions[0].options[1].answer}}</label><br>
-  
-    <input type="radio" id="okay" name="mood" value="Okay">
-    <label for ="okay">{{questions[0].options[2].answer}}</label><br>
-  
-    <input type="radio" id="bad" name="mood" value="Bad">
-    <label for ="bad">{{questions[0].options[3].answer}}</label><br>
-  
-    <input type="radio" id="terrible" name="mood" value="Really Terrible">
-    <label for ="terrible">{{questions[0].options[4].answer}}</label><br>-->
+        <!--
+        <input type="radio" id="great" name="mood" value="Really Great">
+        <label for ="great">{{questions[0].options[0].answer}}</label><br>
+      
+        <input type="radio" id="good" name="mood" value="Good">
+        <label for ="good">{{questions[0].options[1].answer}}</label><br>
+      
+        <input type="radio" id="okay" name="mood" value="Okay">
+        <label for ="okay">{{questions[0].options[2].answer}}</label><br>
+      
+        <input type="radio" id="bad" name="mood" value="Bad">
+        <label for ="bad">{{questions[0].options[3].answer}}</label><br>
+      
+        <input type="radio" id="terrible" name="mood" value="Really Terrible">
+        <label for ="terrible">{{questions[0].options[4].answer}}</label><br>-->
 
-      <div *ngFor="let options of questions[0].options">
+    <!--<div *ngFor="let options of questions[0].options">
           <input type="radio">
           <label for ="great">{{options.answer}}</label><br><br>
-      </div>
+    </div>-->
 
     </div>
 
