Fixed serialization error

--- a/angular-covid19-mh/src/app/question-panel/question-panel.component.html
+++ b/angular-covid19-mh/src/app/question-panel/question-panel.component.html
@@ -3,7 +3,7 @@
     
     <!--<div class="item-1"><h2>{{questions[0].question}}</h2></div>-->
 
-    <div class="item-1"><h2>{{questions[0].SelectedAnswer.Answer}}</h2></div>
+    <div class="item-1"><h2>{{questions[0].selectedAnswer.answer}}</h2></div>
     <div class="item-2">
     
         <!--
