--- a/angular-covid19-mh/src/app/question-panel/question-panel.component.html
+++ b/angular-covid19-mh/src/app/question-panel/question-panel.component.html
@@ -1,9 +1,9 @@
 <div class="container">
   <div class="grid-container">
     
-    <div class="item-1"><h2>{{questions[0].question}}</h2></div>
-    <div class="item-2">
+    <div class="item-1"><h2>{{questions[questionIndex].question}}</h2></div>
     
+    <div class="item-2">
         <!--
         <input type="radio" id="great" name="mood" value="Really Great">
         <label for ="great">{{questions[0].options[0].answer}}</label><br>
@@ -19,21 +19,40 @@
       
         <input type="radio" id="terrible" name="mood" value="Really Terrible">
         <label for ="terrible">{{questions[0].options[4].answer}}</label><br>-->
+      
+      <!--
+      <div *ngFor="let answerSet of questions[questionIndex].options.answerSet">
+        <input type="radio" name="mood">
+        <label for ="great">{{answerSet.answer}}</label><br><br>
+      </div>-->
 
-    <div *ngFor="let answerSet of questions[0].options.answerSet">
-          <input type="radio" name="mood">
-          <label for ="great">{{answerSet.answer}}</label><br><br>
-    </div>
-
+      <div *ngFor="let answerSet of questions[questionIndex].options.answerSet">
+        <label for ="{{answerSet.answer}}">
+          <input id="a-{{answerSet.answer.id}}" [value]='answerSet.id' type="radio" name="mood" [(ngModel)]="radioSelected">
+          {{answerSet.answer}}
+        </label><br><br>
+      </div>
     </div>
 
     <div class="item-3">
-      <a routerLink="/start">
+      <a routerLink="/suggestion">
         <button id=button-back>Back</button>
       </a>
-      <a routerLink="/question/1">
-        <button id=button-next>Next</button>
-      </a>
+
+      <div *ngIf="questionIndex == (questions.length-1); else elseBlock">
+          <a routerLink="/suggestion">
+            <button id=button-next>Finish</button>
+          </a>
+      </div>
+
+      <ng-template #elseBlock>
+          <button id=button-next (click)="nextQuestion(questionIndex)">Next</button>
+      </ng-template>
+      
+      <!--<a routerLink="/question:{{questionIndex}}">
+        <button id=button-next (click)="nextQuestion(questionIndex)">Next</button>
+      </a>-->
+
     </div>
 
   </div>
