--- a/angular-covid19-mh/src/app/suggestion-panel/suggestion-panel.component.html
+++ b/angular-covid19-mh/src/app/suggestion-panel/suggestion-panel.component.html
@@ -1,5 +1,8 @@
 <div class="grid-container">
-    <p>Based on your answers, I suggest... <br></p>
+    <p>Based on your answers, your score was {{score}}.</p>
+    <p>I suggest... <br></p>
+
+    <p>{{</p>
   
     <p>Put variable here for result</p>
   
