Fixed minor issue with radio buttons

--- a/angular-covid19-mh/src/app/app.component.html
+++ b/angular-covid19-mh/src/app/app.component.html
@@ -12,10 +12,10 @@
       <!-- (Leave Blank) -->
     </header>
     
-    <nav>
+    <!--<nav>
       <a routerLink="/question/1">Start</a>
       <a routerLink="/suggestion">Done</a>
-    </nav>
+    </nav>-->
     
     <router-outlet></router-outlet>
     <!--<app-base-panel></app-base-panel>-->
