--- a/angular-covid19-mh/src/app/suggestion-panel/suggestion-panel.component.html
+++ b/angular-covid19-mh/src/app/suggestion-panel/suggestion-panel.component.html
@@ -1,12 +1,17 @@
-<div class="grid-container">
-    <p>Based on your answers, your score was {{score}}.</p>
-    <p>I suggest... <br></p>
-
-    <p>{{</p>
-  
-    <p>Put variable here for result</p>
-  
-    <a routerLink="/start">
-        <button>Retake Questionnaire</button>
-    </a>
+<div class="container">
+    <div class="grid-container">
+        <div class="item-1"><h2>Your score was {{score}}.</h2></div>
+    
+        <div class="item-2">
+            <p>Based on your answers, I suggest...</p>
+      
+            <p>(Put variable here for result)</p>
+        </div>
+    
+        <div class="item-3">
+            <a routerLink="/start">
+                <button>Retake Questionnaire</button>
+            </a>
+        </div>
+    </div>
 </div>
