--- a/angular-covid19-mh/src/app/question-panel/question-panel.component.html
+++ b/angular-covid19-mh/src/app/question-panel/question-panel.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="grid-container">
     
-    <div class="item-1"><h2>{{questions[qIndex].question}}</h2></div>
+    <div class="item-1"><h2>{{questions[qIndex].id}}. {{questions[qIndex].question}}</h2></div>
     
     <div class="item-2">
         <!--
@@ -54,20 +54,34 @@
     </div>
 
     <div class="item-3">
-      <a routerLink="/suggestion">
-        <button id=button-back>Back</button>
-      </a>
 
-      <div *ngIf="qIndex == (questions.length-1); else elseBlock">
+      <!--Previous/Back Button-->
+      <div class="back">
+        <div *ngIf="qIndex == (0); else elseBlock1">
+          <a routerLink="/start">
+            <button id=button-back>Back</button>
+          </a>
+        </div>
+
+        <ng-template #elseBlock1>
+          <button id=button-back routerLink="/question/{{questions[qIndex].id-1}}" (click)="prevQuestion(qIndex)">Back</button>
+        </ng-template>
+
+      </div>
+
+      <!--Next & Finish Buttons-->
+      <div class="next">
+        <div *ngIf="qIndex == (questions.length-1); else elseBlock2">
           <!--<a routerLink="/suggestion">
             <button id=button-next (click)="finishButton(qIndex)">Finish</button>
           </a>-->
           <button id=button-next (click)="finishButton(qIndex)">Finish</button>
-      </div>
+        </div>
 
-      <ng-template #elseBlock>
-          <button id=button-next (click)="nextQuestion(qIndex)">Next</button>
-      </ng-template>
+        <ng-template #elseBlock2>
+            <button id=button-next routerLink="/question/{{questions[qIndex].id+1}}" (click)="nextQuestion(qIndex)">Next</button>
+        </ng-template>
+      </div>
       
       <!--<a routerLink="/question:{{questionIndex}}">
         <button id=button-next (click)="nextQuestion(questionIndex)">Next</button>
