--- a/angular-covid19-mh/src/app/suggestion-panel/suggestion-panel.component.html
+++ b/angular-covid19-mh/src/app/suggestion-panel/suggestion-panel.component.html
@@ -1,16 +1,17 @@
 <div class="container">
     <div class="grid-container">
-        <div class="item-1"><h2>Your score was {{score}}.</h2></div>
+        <div class="item-1"><h2>Your score was {{score}}, which is in the {{suggestion.scoring}} range for scoring.</h2></div>
     
         <div class="item-2">
             <p>Based on your answers, I suggest...</p>
       
-            <p>(Put variable here for result)</p>
+            <!--<p>{{suggestions[0].suggestionSet[0].suggestion}}</p>-->
+            <p>{{suggestion.suggestion}}</p>
         </div>
     
         <div class="item-3">
             <a routerLink="/start">
-                <button>Retake Questionnaire</button>
+                <button (click)="retakeButton()">Retake Questionnaire</button>
             </a>
         </div>
     </div>
