Added commented code

--- a/angular-covid19-mh/src/app/app.component.html
+++ b/angular-covid19-mh/src/app/app.component.html
@@ -1,11 +1,17 @@
+<!-- PURPOSE: Contains content holding the information for all the other panel types (start, question, suggestion) -->
+
 <!DOCTYPE html>
 
 <html lang="en">
 
+  <!-- HEADER -->
   <head>
     <title>"COVID-19 Mental Health"</title>
+    <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Rubik&display=swap" rel="stylesheet">
   </head>
 
+  <!-- BODY: Where bulk of the content will be -->
   <body>
     <header>
       <!-- Works like div element/container, for the top part of page -->
