--- a/angular-covid19-mh/src/app/question-panel/question-panel.component.css
+++ b/angular-covid19-mh/src/app/question-panel/question-panel.component.css
@@ -1,6 +1,3 @@
-* {
-    font-family: sans-serif
-}
 
 /* For actual container itself and its alignment */
 
@@ -35,4 +32,14 @@
 
 .item-3 {
     grid-area: footer;
+}
+
+.button-nav {
+    display: inline-block; /* have buttons beside each other */
+}
+
+#button-back {
+    /*text-align: justify;*/
+    background-color: aquamarine;
+    border-width: 1px;
 }
