--- a/angular-covid19-mh/src/app/question-panel/question-panel.component.html
+++ b/angular-covid19-mh/src/app/question-panel/question-panel.component.html
@@ -1,8 +1,12 @@
+<!-- PURPOSE: Contains content for a Question panel, which displays a single question and allows a user to select an answer based on the pre-selected options listed. -->
+
 <div class="container">
   <div class="grid-container">
     
+    <!-- HEADER: The question -->
     <div class="item-1"><h2>{{questions[qIndex].id}}. {{questions[qIndex].question}}</h2></div>
     
+    <!-- MAIN: List of possible answers/options -->
     <div class="item-2">
         <!--
         <input type="radio" id="great" name="mood" value="Really Great">
@@ -53,11 +57,12 @@
 
     </div>
 
+    <!-- FOOTER: Back and Next buttons -->
     <div class="item-3">
 
       <!--Previous/Back Button-->
-      <div class="back">
-        <div *ngIf="qIndex == (0); else elseBlock1">
+      <!--<div class="back">-->
+        <div class="button-nav" *ngIf="qIndex == (0); else elseBlock1">
           <a routerLink="/start">
             <button id=button-back>Back</button>
           </a>
@@ -67,11 +72,11 @@
           <button id=button-back routerLink="/question/{{questions[qIndex].id-1}}" (click)="prevQuestion(qIndex)">Back</button>
         </ng-template>
 
-      </div>
+      <!--</div>-->
 
       <!--Next & Finish Buttons-->
-      <div class="next">
-        <div *ngIf="qIndex == (questions.length-1); else elseBlock2">
+      <!--<div class="next">-->
+        <div class="button-nav" *ngIf="qIndex == (questions.length-1); else elseBlock2">
           <!--<a routerLink="/suggestion">
             <button id=button-next (click)="finishButton(qIndex)">Finish</button>
           </a>-->
@@ -81,7 +86,7 @@
         <ng-template #elseBlock2>
             <button id=button-next routerLink="/question/{{questions[qIndex].id+1}}" (click)="nextQuestion(qIndex)">Next</button>
         </ng-template>
-      </div>
+      <!--</div>-->
       
       <!--<a routerLink="/question:{{questionIndex}}">
         <button id=button-next (click)="nextQuestion(questionIndex)">Next</button>
