--- a/angular-covid19-mh/src/app/start-panel/start-panel.component.css
+++ b/angular-covid19-mh/src/app/start-panel/start-panel.component.css
@@ -1,13 +1,11 @@
-* {
-    font-family: sans-serif
-}
-
 /* For actual container itself and its alignment */
+
 .container {
     display: inline-block;
     background-color: rgb(16, 95, 92);
     color: #ffffff;
     border-radius: 5px;
+    margin: 0px;
 }
 
 /* For the grid within the box/container */
