--- a/angular-covid19-mh/src/app/start-panel/start-panel.component.html
+++ b/angular-covid19-mh/src/app/start-panel/start-panel.component.html
@@ -1,10 +1,13 @@
+<!-- PURPOSE: Contains content for the first panel, which is the "Start" page. This displays a welcome message to the user, and contains the button that will set off the mental health assessment. -->
 <div class="container">
     <div class="grid-container">
       
+        <!-- MAIN: Welcome message to user and explanation of the web app -->
         <div class="item-1"><p>Hello! Welcome to my COVID-19 mental health app.<br><br>
         
         This app is designed to give you a series of questions regarding your mental health during COVID-19, and give suggestions to help improve your wellbeing during COVID-19.<br><br>Click the button below to get started.</p>
 
+        <!-- FOOTER: Button starting off the mental health assessment -->
         <div class="item-2">
             <a routerLink="/question/1">
                 <button>Start Here</button>
