--- a/angular-covid19-mh/src/app/start-panel/start-panel.component.css
+++ b/angular-covid19-mh/src/app/start-panel/start-panel.component.css
@@ -2,10 +2,10 @@
 
 .container {
     display: inline-block;
-    background-color: rgb(16, 95, 92);
-    color: #ffffff;
+    background-color: #5e6cba;
+    color: #FFFFFF;
     border-radius: 5px;
-    margin: 0px;
+    box-shadow: 0 8px 10px -8px #2b3433;
 }
 
 /* For the grid within the box/container */
@@ -26,4 +26,51 @@
 
 .item-2 {
     grid-area: footer;
+}
+
+.button-start {
+    width: 30%;
+    padding: 3%;
+    /*border-color: rgb(76, 76, 76);*/
+}
+
+/* Animations */
+
+@keyframes fadeInUp {
+    from {
+        transform: translate3d(0,40px,0)
+    }
+
+    to {
+        transform: translate3d(0,0,0);
+        opacity: 1
+    }
+}
+
+@-webkit-keyframes fadeInUp {
+    from {
+        transform: translate3d(0,40px,0)
+    }
+
+    to {
+        transform: translate3d(0,0,0);
+        opacity: 1
+    }
+}
+
+.animated {
+    animation-duration: 1s;
+    animation-fill-mode: both;
+    -webkit-animation-duration: 1s;
+    -webkit-animation-fill-mode: both
+}
+
+.animatedFadeInUp {
+    opacity: 0
+}
+
+.fadeInUp {
+    opacity: 0;
+    animation-name: fadeInUp;
+    -webkit-animation-name: fadeInUp;
 }
