--- a/angular-covid19-mh/src/app/start-panel/start-panel.component.html
+++ b/angular-covid19-mh/src/app/start-panel/start-panel.component.html
@@ -1,5 +1,5 @@
 <!-- PURPOSE: Contains content for the first panel, which is the "Start" page. This displays a welcome message to the user, and contains the button that will set off the mental health assessment. -->
-<div class="container">
+<div class="container animated animatedFadeInUp fadeInUp">
     <div class="grid-container">
       
         <!-- MAIN: Welcome message to user and explanation of the web app -->
@@ -10,7 +10,7 @@
         <!-- FOOTER: Button starting off the mental health assessment -->
         <div class="item-2">
             <a routerLink="/question/1">
-                <button>Start Here</button>
+                <button class=button-start>Start Here</button>
             </a>
         </div>
         
