--- a/angular-covid19-mh/src/app/question-panel/question-panel.component.css
+++ b/angular-covid19-mh/src/app/question-panel/question-panel.component.css
@@ -1,38 +1,45 @@
 
 /* For actual container itself and its alignment */
 
-
-/*.container {
-    display: inline-block;
-    background-color: rgb(93, 154, 152);
-    border-radius: 5px;
-}*/
+.container {
+    max-width: 600px;
+}
 
 /* For the grid within the box/container */
 .grid-container {
     display: grid;
-    grid-template-columns: 50px 500px 50px;
-    grid-template-rows: auto auto 20px 20px;
+    grid-template-columns: 5% 90% 5%; /*50px 500px 50px;*/
+    grid-template-rows: auto auto auto;
     grid-template-areas:
         "header header header"
         ". main ."
-        ". footer ."
-        ". . .";
+        ". footer .";
     border-radius: 5px;
+    padding: 0;
+    padding-bottom: 4%;
 }
 
 .item-1 {
     grid-area: header;
-    background-color: #303F9F;
+    background-color: #4f60bb;
     border-top-right-radius: 5px;
     border-top-left-radius: 5px;
-    box-shadow: 0 8px 16px -8px #2b3433;
+    /*box-shadow: 0 8px 16px -8px #2b3433;*/
+    color: #FFFFFF;
+    display: inline-block;
+    padding-left: 5%;
+    padding-right: 5%;
 }
+
+/*h2 {
+    width: 75%;
+    text-align: center;
+}*/
 
 .item-2 {
     grid-area: main;
     text-align: start;
-    color: #ffffff;
+    color: #212121;
     padding-top: 5%;
     width: 100%;
 }
@@ -58,6 +65,15 @@
     transition-duration: 0.4s;
     color: #FFFFFF;*/
     /*box-shadow: 0 20px 54px -8px #2b3433;*/
+}
+
+.button-back {
+    float: left;
+}
+
+.button-next {
+    float: right;
+    margin: 0;
 }
 
 /* ANIMATIONS */
