--- a/angular-covid19-mh/src/app/question-panel/question-panel.component.html
+++ b/angular-covid19-mh/src/app/question-panel/question-panel.component.html
@@ -12,39 +12,6 @@
     
     <!-- MAIN: List of possible answers/options -->
     <div class="item-2">
-        <!--
-        <input type="radio" id="great" name="mood" value="Really Great">
-        <label for ="great">{{questions[0].options[0].answer}}</label><br>
-      
-        <input type="radio" id="good" name="mood" value="Good">
-        <label for ="good">{{questions[0].options[1].answer}}</label><br>
-      
-        <input type="radio" id="okay" name="mood" value="Okay">
-        <label for ="okay">{{questions[0].options[2].answer}}</label><br>
-      
-        <input type="radio" id="bad" name="mood" value="Bad">
-        <label for ="bad">{{questions[0].options[3].answer}}</label><br>
-      
-        <input type="radio" id="terrible" name="mood" value="Really Terrible">
-        <label for ="terrible">{{questions[0].options[4].answer}}</label><br>-->
-      
-      <!--
-      <div *ngFor="let answerSet of questions[questionIndex].options.answerSet">
-        <input type="radio" name="mood">
-        <label for ="great">{{answerSet.answer}}</label><br><br>
-      </div>-->
-
-      <!--
-      <div *ngFor="let answerSet of questions[questionIndex].options.answerSet">
-        <label for ="{{answerSet.answer}}">
-          <input id="a-{{answerSet.answer.id}}" [value]='answerSet.id' type="radio" name="mood" [(ngModel)]="radioSelected">
-          {{answerSet.answer}}
-        </label><br><br>
-      </div>-->
-
-      <!--
-      <p>{{questions[qIndex].selectedAnswer.id}}</p>
-      <p>{{questions[qIndex].options.answerSet[0].id}}</p>-->
 
       <div *ngFor="let answerSet of questions[qIndex].options.answerSet">
         <label for ="{{answerSet.answer}}">
@@ -53,7 +20,6 @@
           {{answerSet.answer}}
         </label><br><br>
       </div>
-
 
     </div>
 
@@ -64,12 +30,12 @@
       <!--<div class="back">-->
         <div *ngIf="qIndex == (0); else elseBlock1">
           <a routerLink="/start">
-            <button class="button-nav">Back</button>
+            <button class="button-nav button-back">Back</button>
           </a>
         </div>
 
         <ng-template #elseBlock1>
-          <button class="button-nav" routerLink="/question/{{questions[qIndex].id-1}}" (click)="prevQuestion(qIndex)">Back</button>
+          <button class="button-nav button-back" routerLink="/question/{{questions[qIndex].id-1}}" (click)="prevQuestion(qIndex)">Back</button>
       </ng-template>
 
       <!--</div>-->
@@ -80,11 +46,11 @@
           <!--<a routerLink="/suggestion">
             <button id=button-next (click)="finishButton(qIndex)">Finish</button>
           </a>-->
-          <button (click)="finishButton(qIndex)">Finish</button>
+          <button class="button-nav button-next" (click)="finishButton(qIndex)">Finish</button>
         </div>
 
         <ng-template #elseBlock2>
-            <button routerLink="/question/{{questions[qIndex].id+1}}" (click)="nextQuestion(qIndex)">Next</button>
+            <button class="button-nav button-next" routerLink="/question/{{questions[qIndex].id+1}}" (click)="nextQuestion(qIndex)">Next</button>
         </ng-template>
 
       <!--</div>-->
