--- a/angular-covid19-mh/src/app/start-panel/start-panel.component.css
+++ b/angular-covid19-mh/src/app/start-panel/start-panel.component.css
@@ -1,31 +1,39 @@
 /* For actual container itself and its alignment */
 
 .container {
-    display: inline-block;
+    /*display: inline-block;*/
     background-color: #5e6cba;
     color: #FFFFFF;
     border-radius: 5px;
-    box-shadow: 0 8px 10px -8px #2b3433;
+    /*box-shadow: 0 8px 10px -8px #2b3433;*/
+    max-width: 600px;
+    /*min-height: 240px;*/
+    /*text-align: center;*/
 }
 
 /* For the grid within the box/container */
 .grid-container {
     display: grid;
-    grid-template-columns: 50px 500px 50px;
-    grid-template-rows: auto auto 20px auto 20px;
+    grid-template-columns: 5% 90% 5%;/*50px 500px 50px;*/
+    grid-template-rows: auto; /*5% auto 80px 5%;*/
     grid-template-areas:
-        ". . ."
         ". main ."
-        ". . ."
-        ". footer ."
+        ". footer .";
+    align-items: center;
 }
 
 .item-1 {
     grid-area: main;
+    padding: 2%;
+}
+
+p {
+    margin: 0;
 }
 
 .item-2 {
     grid-area: footer;
+    padding: 2%;
 }
 
 .button-start {
@@ -34,7 +42,7 @@
     /*border-color: rgb(76, 76, 76);*/
 }
 
-/* Animations */
+/* ANIMATIONS */
 
 @keyframes fadeInUp {
     from {
