--- a/angular-covid19-mh/src/app/start-panel/start-panel.component.html
+++ b/angular-covid19-mh/src/app/start-panel/start-panel.component.html
@@ -3,9 +3,12 @@
     <div class="grid-container">
       
         <!-- MAIN: Welcome message to user and explanation of the web app -->
-        <div class="item-1"><p>Hello! Welcome to my COVID-19 mental health app.<br><br>
+        <div class="item-1">
+            <p>Hello! Welcome to my COVID-19 mental health app.<br><br>
         
-        This app is designed to give you a series of questions regarding your mental health during COVID-19, and give suggestions to help improve your wellbeing during COVID-19.<br><br>Click the button below to get started.</p>
+            This app is designed to give you a series of questions regarding your mental health during COVID-19, and give suggestions to help improve your wellbeing during COVID-19.<br><br>Click the button below to get started.</p>
+
+        </div>
 
         <!-- FOOTER: Button starting off the mental health assessment -->
         <div class="item-2">
@@ -15,4 +18,4 @@
         </div>
         
     </div>
-  </div>
+</div>
