--- a/angular-covid19-mh/src/app/suggestion-panel/suggestion-panel.component.css
+++ b/angular-covid19-mh/src/app/suggestion-panel/suggestion-panel.component.css
@@ -1,34 +1,51 @@
-* {
-    font-family: sans-serif
-}
-
 .container {
     display: inline-block;
-    background-color: rgb(93, 154, 152);
+    background-color: #5e6cba;
+    color: #FFFFFF;
     border-radius: 5px;
+    max-width: 600px;
 }
 
 /* For the grid within the box/container */
 .grid-container {
     display: grid;
-    grid-template-columns: 50px 500px 50px;
-    grid-template-rows: auto auto 20px auto 20px;
+    grid-template-columns: 5% 90% 5%;
+    grid-template-rows: auto;
     grid-template-areas:
         ". header ."
         ". main ."
-        ". . ."
-        ". footer ."
-        ". . ."
+        ". footer .";
 }
 
 .item-1 {
     grid-area: header;
+    margin: 2%;
 }
 
 .item-2 {
     grid-area: main;
+    text-align: center;
 }
 
 .item-3 {
     grid-area: footer;
+    margin-bottom: 4%;
+}
+
+.scoring {
+    margin: 0;
+}
+
+.suggestion {
+    display: inline-block;
+    margin: 3%;
+    min-width: 85%;
+    min-height: 5%;
+    /*background-color: #e4a545;
+    width: 25%;
+    height: 50%;*/
+}
+
+p {
+    margin: 2%;
 }
