--- a/angular-covid19-mh/src/app/suggestion-panel/suggestion-panel.component.html
+++ b/angular-covid19-mh/src/app/suggestion-panel/suggestion-panel.component.html
@@ -4,13 +4,13 @@
     <div class="grid-container">
 
         <!-- HEADER: Displays the calculated score and scoring (low/medium/high) in the view -->
-        <div class="item-1"><h2>Your score was {{score}}, which is in the {{suggestion.scoring}} range for scoring.</h2></div>
+        <div class="item-1"><h2 class="scoring">Your score was {{score}}, which indicates a {{suggestion.scoring}} risk of strained mental health due to COVID-19. </h2></div>
     
         <!-- MAIN: Displays a suggestion based on the user's score -->
         <div class="item-2">
             <p>Based on your answers, I suggest...</p>
-      
-            <p>{{suggestion.suggestion}}</p>
+            
+            <h2 class="suggestion">{{suggestion.suggestion}}</h2>
         </div>
     
         <!-- FOOTER: Displays a "Retake" button that clears out the map containing the user's previous answers before navigating back to the Start page/panel -->
