--- a/angular-covid19-mh/src/app/app.component.css
+++ b/angular-covid19-mh/src/app/app.component.css
@@ -1,7 +1,7 @@
 body {
-    text-align: center;
-    margin: 20px;
-    height: 75%;
+    /*text-align: center;*/
+    /*margin-top: 30px;*/
+    /*height: 75%;*/
 }
 
 /*div {
