--- a/angular-covid19-mh/src/app/start-panel/start-panel.component.css
+++ b/angular-covid19-mh/src/app/start-panel/start-panel.component.css
@@ -1,30 +1,31 @@
 /* For actual container itself and its alignment */
 
-.container {
+/*.container {
+    /*background-color: #5e6cba;
+    color: #FFFFFF;*/
+    /*border-radius: 5px;*/
+    /*max-width: 600px;*/
+
     /*display: inline-block;*/
-    background-color: #5e6cba;
-    color: #FFFFFF;
-    border-radius: 5px;
     /*box-shadow: 0 8px 10px -8px #2b3433;*/
-    max-width: 600px;
     /*min-height: 240px;*/
     /*text-align: center;*/
-}
+/*}*/
 
 /* For the grid within the box/container */
 .grid-container {
-    display: grid;
+    /*display: grid;
     grid-template-columns: 5% 90% 5%;/*50px 500px 50px;*/
-    grid-template-rows: auto; /*5% auto 80px 5%;*/
+    /*grid-template-rows: auto; /*5% auto 80px 5%;*/
     grid-template-areas:
         ". main ."
         ". footer .";
-    align-items: center;
+    /*align-items: center;*/
 }
 
 .item-1 {
     grid-area: main;
-    padding: 2%;
+    /*padding: 2%;*/
 }
 
 p {
@@ -36,6 +37,8 @@ p {
     padding: 2%;
 }
 
+/* BUTTONS */
+
 .button-start {
     width: 30%;
     padding: 3%;
@@ -43,42 +46,3 @@ p {
 }
 
 /* ANIMATIONS */
-
-@keyframes fadeInUp {
-    from {
-        transform: translate3d(0,40px,0)
-    }
-
-    to {
-        transform: translate3d(0,0,0);
-        opacity: 1
-    }
-}
-
-@-webkit-keyframes fadeInUp {
-    from {
-        transform: translate3d(0,40px,0)
-    }
-
-    to {
-        transform: translate3d(0,0,0);
-        opacity: 1
-    }
-}
-
-.animated {
-    animation-duration: 1s;
-    animation-fill-mode: both;
-    -webkit-animation-duration: 1s;
-    -webkit-animation-fill-mode: both
-}
-
-.animatedFadeInUp {
-    opacity: 0
-}
-
-.fadeInUp {
-    opacity: 0;
-    animation-name: fadeInUp;
-    -webkit-animation-name: fadeInUp;
-}
