--- a/angular-covid19-mh/src/app/suggestion-panel/suggestion-panel.component.css
+++ b/angular-covid19-mh/src/app/suggestion-panel/suggestion-panel.component.css
@@ -1,16 +1,16 @@
-.container {
-    display: inline-block;
-    background-color: #5e6cba;
-    color: #FFFFFF;
-    border-radius: 5px;
-    max-width: 600px;
-}
+/*.container {
+    /*display: inline-block;*/
+    /*background-color: #5e6cba;
+    color: #FFFFFF;*/
+    /*border-radius: 5px;*/
+    /*max-width: 600px;*/
+/*}*/
 
 /* For the grid within the box/container */
 .grid-container {
-    display: grid;
+    /*display: grid;
     grid-template-columns: 5% 90% 5%;
-    grid-template-rows: auto;
+    grid-template-rows: auto;*/
     grid-template-areas:
         ". header ."
         ". main ."
@@ -18,25 +18,28 @@
 }
 
 .item-1 {
-    grid-area: header;
-    margin: 2%;
+    /*grid-area: header;*/
+    /*margin: 2%;*/
+    /*padding: 2%;*/
 }
 
 .item-2 {
-    grid-area: main;
-    text-align: center;
+    /*grid-area: main;*/
+    /*text-align: center;*/
 }
 
 .item-3 {
-    grid-area: footer;
+    /*grid-area: footer;*/
     margin-bottom: 4%;
 }
 
-.scoring {
+/* TEXT */
+
+.scoring-text {
     margin: 0;
 }
 
-.suggestion {
+.suggestion-text {
     display: inline-block;
     margin: 3%;
     min-width: 85%;
